documentation swagger api-docs ajoute
